server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubo-server
  template:
    metadata:
      labels:
        app: kubo-server
    spec: 
      containers:
        - name: kubo-server
          imagePullPolicy: Always
          image: us-central1-docker.pkg.dev/kubo-448922/kubo-server/server:latest
          ports:
            - containerPort: 80
