server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubo-server-service
spec:
  type: ClusterIP
  selector:
    app: kubo-server
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
