server/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubo-server-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: kubo-server-service
                port:
                  number: 80
            path: /
            pathType: Prefix
